--- a/src/app/element/element.component.html
+++ b/src/app/element/element.component.html
@@ -40,7 +40,9 @@
       <img
         *ngIf="element != undefined"
         src="{{
-          'https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://inventar.kv-kraichgau.sebamomann.de/element/' +
+          'https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=' +
+            baseUrl +
+            '/element/' +
             element.id +
             '&choe=UTF-8'
         }}"
