--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   max-width: 1000px;
   min-width: 750px;
   color: black;
+
+  .actions {
+    max-width: 250px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+  }
 }
 
 .open-element {
@@ -47,4 +55,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-select-value {
   color: black;
 }
+
+
+@media (max-width : 720px) {
+  .wrapper {
+    width: 90vw;
+    min-width: unset;
+    max-width: unset;
+  }
+}
+
 
