--- a/src/app/tree/tree-list/tree-list.component.scss
+++ b/src/app/tree/tree-list/tree-list.component.scss
@@ -29,6 +29,7 @@ mat-tree {
   padding-left: 32px;
 }
 
+
 .mat-tree-node {
   min-height: unset;
   font-size: unset;
@@ -57,5 +58,21 @@ mat-tree {
     width: 20px;
     font-size:20px;
     line-height: 20px;
+  }
+}
+
+@media (max-width : 720px) {
+  .example-tree .mat-nested-tree-node div[role=group] {
+    padding-left: 24px;
+  }
+
+  .example-tree div[role=group] > .mat-tree-node {
+    padding-left: 24px;
+  }
+
+  .mat-tree-node {
+    & > button {
+      margin: 0px 4px 0px 0px
+    }
   }
 }
