--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,6 +56,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color: black;
 }
 
+.empty{
+  display: block;
+  color: gray;
+  margin: 12px 0px;
+}
+
 
 @media (max-width : 720px) {
   .wrapper {
