--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,13 +18,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .wrapper {
-  padding: 12px;
+  padding: 16px 32px;
   background-color: rgb(236, 236, 236);
   border-radius: 10px;
   margin: 0 auto;
-  width: 50%;
+  width: fit-content;
   max-width: 1000px;
-  min-width: 750px;
+  min-width: 500px;
   color: black;
 
   .actions {
