--- a/src/app/element/element.component.scss
+++ b/src/app/element/element.component.scss
@@ -5,8 +5,8 @@
 
 .grid{
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 25px;
+  grid-template-columns: 1fr auto;
+  grid-gap: 50px;
 }
 
 .data-wrapper {
