allow settings on name search

--- a/src/app/tree/tree.component.html
+++ b/src/app/tree/tree.component.html
@@ -3,6 +3,15 @@
 </div>
 
 <div class="tree-wrapper wrapper">
+  <button
+    (click)="openDialog()"
+    mat-flat-button
+    color="accent"
+    class="settings-button"
+  >
+    <mat-icon>settings</mat-icon>
+  </button>
+
   <div class="search-header">
     <div class="search">
       <mat-form-field>
