--- a/src/app/element/element-form/element-form.component.html
+++ b/src/app/element/element-form/element-form.component.html
@@ -31,8 +31,12 @@
 
   <mat-form-field>
     <mat-label>Übergeordnetes Element</mat-label>
-    <mat-select formControlName="parent">
-      <input (keyup)="onKey($event.target.value)" />
+    <mat-select formControlName="parent" #select>
+      <input
+        (keyup)="onKey($event.target.value)"
+        placeholder="Suche"
+        class="search-input"
+      />
       <mat-option [value]="0">Keins</mat-option>
       <ng-container *ngIf="element && element.parent">
         <mat-option [value]="element.parent.id">{{
