--- a/src/app/element/element-form/element-form.component.scss
+++ b/src/app/element/element-form/element-form.component.scss
@@ -9,3 +9,11 @@ form {
       color: black;
     }
 }
+
+.search-input {
+  border: none;
+  font-size: 1;
+  outline: none;
+  padding: 8px 16px;
+  border-bottom-right-radius: 5px;
+}
