--- a/src/app/element/element-form/element-form.component.html
+++ b/src/app/element/element-form/element-form.component.html
@@ -34,7 +34,7 @@
     <mat-select formControlName="parent" #select>
       <input
         (keyup)="onKey($event.target.value)"
-        placeholder="Suche"
+        placeholder="Suche (bitte tippen)"
         class="search-input"
       />
       <mat-option [value]="0">Keins</mat-option>
