--- a/src/app/tree/tree.component.html
+++ b/src/app/tree/tree.component.html
@@ -20,7 +20,7 @@
           matInput
           type="text"
           (keyup)="change($event.target.value)"
-          placeholder="Nach Element suchen"
+          placeholder="Suchen"
         />
       </mat-form-field>
     </div>
