fix double // at URL

--- a/src/app/element/element.component.html
+++ b/src/app/element/element.component.html
@@ -56,7 +56,7 @@
             src="{{
               'https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=' +
                 baseUrl +
-                '/element/' +
+                'element/' +
                 element.id +
                 '&choe=UTF-8'
             }}"
