--- a/src/app/element/element-create/element-create.component.scss
+++ b/src/app/element/element-create/element-create.component.scss
@@ -1,5 +1,5 @@
 .created{
-  margin : 25px auto;
+  margin : 50px auto !important;
   background-color: #4bb54383;
   width: fit-content;
   padding: 8px 16px;
