--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,21 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   }
 }
 
+.mat-card {
+  margin-top: 50px !important;
+
+  .mat-card-title {
+    text-align: center;
+    margin-bottom: 16px;
+
+    mat-icon {
+      margin-left: 8px;
+      vertical-align: middle;
+    }
+  }
+}
+
+
 .wrapper {
   padding: 16px 32px;
   background-color: rgb(236, 236, 236);
