--- a/src/app/element/element.component.scss
+++ b/src/app/element/element.component.scss
@@ -31,7 +31,7 @@ display: none;
 
   & > *:nth-child(odd) {
     text-align: right;
-    font-weight: bolder;
+    font-weight: 500;
   }
 
   & > *:nth-child(even) {
@@ -68,12 +68,13 @@ display: none;
 
 .actions {
   margin-top: 25px;
-  grid-template-columns: 1fr 1fr auto auto;
+  grid-template-columns: 1fr 1fr;
 }
 
 .qr-code {
   margin: 0 auto;
   width: fit-content;
+  border-radius: 5px;
 
   img {
     width: 200px;
