--- a/src/app/tree/tree.component.html
+++ b/src/app/tree/tree.component.html
@@ -1,14 +1,7 @@
 <mat-card class="tree-wrapper wrapper">
   <mat-card-title>Übersicht</mat-card-title>
 
-  <button
-    (click)="openDialog()"
-    mat-flat-button
-    color="accent"
-    class="settings-button"
-  >
-    <mat-icon>settings</mat-icon>
-  </button>
+  <mat-icon class="settings-button" (click)="openDialog()">settings</mat-icon>
 
   <div class="search-header">
     <div class="search">
