--- a/src/app/tree/tree-list/tree-list.component.scss
+++ b/src/app/tree/tree-list/tree-list.component.scss
@@ -19,7 +19,7 @@ mat-tree {
 .example-tree .mat-nested-tree-node div[role=group] {
   padding-left: 32px;
   padding-left: 22px;
-  border-left: 1px solid gray;
+  border-left: 1px solid white;
   margin-left: 9px;
 }
 
@@ -43,13 +43,13 @@ mat-tree {
 
 .mat-tree-node {
   min-height: unset;
-  font-size: 16px !important;
+  font-size: 18px !important;
+  color: white;
 
   &:last-of-type:not([role="treeitem"]) {
     margin-bottom: -13px;
   }
 
-  color: black;
   & > * {
     margin: 0px 10px;
   }
