--- a/src/app/tree/tree.component.scss
+++ b/src/app/tree/tree.component.scss
@@ -24,7 +24,7 @@
     text-align: right;
 
     button {
-      background-color: #a1d0ff;
+      background-color: white;
       color:#37414a;
     }
   }
