--- a/src/app/element/element-form/element-form.component.scss
+++ b/src/app/element/element-form/element-form.component.scss
@@ -11,9 +11,14 @@ form {
 }
 
 .search-input {
+  color: black !important;
   border: none;
   font-size: 1;
   outline: none;
   padding: 8px 16px;
   border-bottom-right-radius: 5px;
+
+  &::placeholder {
+    color: gray !important;
+  }
 }
